--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-dotenv": "^0.1.3",
     "react-hook-form": "^7.43.2",
     "react-markdown": "^8.0.5",
+    "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
