--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-markdown": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "rehype-raw": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
