--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-hook-form": "^7.43.2",
+    "react-icons": "^4.8.0",
     "react-markdown": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
