--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "node ./server/server.js",
     "dev": "concurrently \"npm run client\" \"npm run server\"",
     "client": "cd client && npm start",
-    "server": "cd server && node server"
+    "server": "cd server && node server",
+    "build": "cd server && npm install  && cd ../client && npm install && npm run build"
 
   },
   "author": "",
