--- a/package.json
+++ b/package.json
@@ -12,9 +12,20 @@
     "build": "cd server && npm install  && cd ../client && npm install && npm run build"
 
   },
+  "engines": {
+    "node": "16.x"
+  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.28.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.2.1",
+    "validator": "^13.7.0",
     "concurrently": "^7.6.0"
   }
 }
